# CommonFuncs

./: .gitignore  README.md
JsonManager/: CMakeLists.txt  JsonManager.cpp  JsonManager.h  crypto.hpp  main.cpp
MinIOManager/: CMakeLists.txt  MinIO.cpp  MinIO.h  MinIOManager.cpp  MinIOManager.h  TaskManager.hpp  main.cpp  testMinIO.cpp
ModelFormat/: B3DWManager.cpp  B3DWManager.h  CMakeLists.txt  GeneratorGeoTiff.cpp  GeneratorGeoTiff.h  GeoTransform.h  Gis.cpp  Gis.h  fbx.cpp  fbx.h  main.cpp  osgb2glb.cpp  osgb2glb.h  png2tiff.cpp
ModelFormat/meshoptimizer/: CMakeLists.txt
ModelFormat/plyReader/: CMakeLists.txt  VertexData.cpp  VertexData.h  ply.h  ply2glb.cpp  ply2glb.h  ply2osgb.cpp  ply2osgb.h  plyfile.cpp  typedefs.h
ModelFormat/plySpecial/: CMakeLists.txt  ReaderWriterPLY.cpp  ReaderWriterPLY.h  ply2glb.cpp  ply2glb.h  plyfile.cpp  vertexData.cpp  vertexData.h
ProgressUpdate/: CMakeLists.txt  ProgressManager.cpp  ProgressManager.h  libProgressExport.cpp  libProgressExport.h  main.cpp
RSACrypto/: CMakeLists.txt  main.cpp
RawGLB/: CMakeLists.txt  GLBWriter.cpp  main.cpp
RawGLB/data/: textured_cube.glb
ThreadPool/: CMakeLists.txt  HGThreadPool.hpp  RedisManager.cpp  RedisManager.h  TaskPool.hpp  testPool.cpp
WriteRawGLB/: CMakeLists.txt  WriteGLBBox.cpp  WriteGLBBox.h  main.cpp
httpserver/: CMakeLists.txt  testHttpserver.cpp
